data/all_generated_tests/raw_wast_tests/nop_StackCorruption_139.wast
;; 10. **Test Description**:     Create a function that simulates a deep call stack by invoking several nested function calls interspersed with `nop` instructions. Check the final state of the stack for consistency.    **Constraint**: Deep call stacks should maintain integrity with `nop`.    **Reasoning**: Tests if extensive use of nested calls interleaved with `nop` affects the stack's state, aiming to detect potential stack corruption.

(assert_invalid
  (module
    (func $deep-call-stack
      (call $nested-1)
      (nop)
    )
    (func $nested-1
      (call $nested-2)
      (nop)
    )
    (func $nested-2
      (call $nested-3)
      (nop)
    )
    (func $nested-3
      (call $nested-4)
      (nop)
    )
    (func $nested-4
      (call $nested-5)
      (nop)
    )
    (func $nested-5
      (nop)
    )
  )
  "type mismatch"
)